--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 server.port=8080
 server.error.include-message=always
 build.version=@project.version@
+token.expiration.time=1d
+services={\
+  'service-a':{\
+      'https://localhost:8081'\
+  },\
+'service-b':{\
+      'https://localhost:8082'\
+  }\
+}
