Add public keys handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
+host=localhost
+token.keys.public.file=target/public-keys.json
 server.error.include-message=always
 build.version=@project.version@
 token.expiration.time=1d
@@ -6,7 +8,7 @@ services={\
   'service-a':{\
       'https://localhost:8081'\
   },\
-'service-b':{\
+  'service-b':{\
       'https://localhost:8082'\
   }\
 }
