Fix requesing and sending tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@ server.port=8080
 host=localhost
 token.keys.public.file=target/public-keys.json
 server.error.include-message=always
+server.error.include-binding-errors=always
 build.version=@project.version@
 token.expiration.time=1d
 services={\
-  'service-a':{\
+  'example-user-service':{\
       'https://localhost:8081'\
   },\
-  'service-b':{\
+  'example-email-service':{\
       'https://localhost:8082'\
   }\
 }
