--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>sapala.s2s-auth-service</groupId>
     <artifactId>s2s-auth-service</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <name>s2s-auth-service</name>
     <description>Service for service-to-service authentication</description>
     <properties>
@@ -27,7 +27,7 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- Web -->
+        <!-- Http -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
