Update token exporation time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ token.keys.public.file=target/public-keys.json
 server.error.include-message=always
 server.error.include-binding-errors=always
 build.version=@project.version@
-token.expiration.time=1d
+token.expiration.time=2h
 services={\
   'example-user-service':{\
       'https://localhost:8081'\
