Add public keys synchronization between instances

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 server.port=8080
 host=localhost
+independent-start=false
 token.keys.public.file=target/public-keys.json
 server.error.include-message=always
 server.error.include-binding-errors=always
 build.version=@project.version@
 token.expiration.time=2h
 services={\
+  's2s-auth-service':{\
+      'http://localhost:8080',\
+      'http://localhost:8079'\
+  },\
   'example-user-service':{\
-      'https://localhost:8081'\
+      'http://localhost:8081'\
   },\
   'example-email-service':{\
-      'https://localhost:8082'\
+      'http://localhost:8082'\
   }\
 }
