Add new services and https config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,35 @@ build.version=@project.version@
 token.expiration.time=2h
 services={\
   's2s-auth-service':{\
-      'http://localhost:8080',\
-      'http://localhost:8079'\
+      'https://localhost:8080',\
+      'https://localhost:8079'\
   },\
   'example-user-service':{\
       'http://localhost:8081'\
   },\
   'example-email-service':{\
       'http://localhost:8082'\
+  },\
+  'build-manager-service':{\
+      'https://localhost:8179'\
+  },\
+  'build-service':{\
+      'https://localhost:8180',\
+      'https://localhost:8181',\
+      'https://localhost:8182',\
+      'https://localhost:8183',\
+      'https://localhost:8184',\
+      'https://localhost:8185',\
+      'https://localhost:8186',\
+      'https://localhost:8187',\
+      'https://localhost:8188',\
+      'https://localhost:8189'\
   }\
 }
+
+# HTTPS config
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=C:/keystore/localhost.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=localhost
+server.ssl.enabled=true
